<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Menu"></item>


    <group android:checkableBehavior="single">
        <menu>
            <item
                android:id="@+id/timer"
                android:icon="@drawable/timer"
                android:onClick="go_timer"
                android:title="@string/timer_home" />
            <item
                android:id="@+id/alarm"
                android:icon="@drawable/alarm"
                android:onClick="go_alarm"
                android:title="@string/alarm_home" />
            <item
                android:id="@+id/temperature"
                android:icon="@drawable/temperature"
                android:onClick="go_temperature"
                android:title="@string/temperature_home" />
            <item
                android:id="@+id/currency"
                android:icon="@drawable/currency"
                android:onClick="go_currency"
                android:title="@string/currency_home" />
        </menu>

    </group>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/about"
                android:title="@string/about" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
